Fix label spacing on form editor

--- a/resources/assets/admin/styles/_el_customize.scss
+++ b/resources/assets/admin/styles/_el_customize.scss
@@ -102,7 +102,7 @@
 // SIDEBAR OPTIONS
 .option-fields-section--content {
     .el-form-item__label {
-        padding-bottom: 4px;
+        padding-bottom: 10px;
         line-height: 1;
         color: $base-color;
     }
