--- a/resources/assets/admin/styles/editor.scss
+++ b/resources/assets/admin/styles/editor.scss
@@ -664,10 +664,6 @@ mark {
   margin: 7px 0;
 }
 
-.sidebar-popper {
-  max-width: 300px;
-  line-height: 1.5;
-}
 .address-field-wrapper {
   margin-top: 10px;
 }
